add grocery poi type

--- a/src/resources/langs/de.yaml
+++ b/src/resources/langs/de.yaml
@@ -41,6 +41,7 @@ around_me:
     shelter: Unterkünfte
     hotel: Hotels
     campsite: Camping
+    grocecy: Lebensmittelgeschäft
     restaurant: Restaurants
     bottlerefill: Flaschenauffüllungen
     sandwich: Schnellimbiss
